--- a/package.json
+++ b/package.json
@@ -2,10 +2,32 @@
   "name": "d3-traversy-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "test": "NODE_ENV=test mocha",
+    "dev": "NODE_ENV=dev npm-run-all --parallel watch:app watch:sass",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "watch:app": "nodemon .",
+    "watch:sass": "nodemon -e scss -x 'npm run sass'",
+    "setup": "mkdir ./public; mkdir ./public/css",
+    "sass": "npm-sass ./app/assets/sass/app.scss > ./public/css/app.css",
+    "clean": "rm -rf ./public",
+    "postinstall": "npm-run-all clean setup sass"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.2",
+    "express-partial-templates": "^0.2.0",
+    "hof-frontend-toolkit": "^2.1.0",
+    "hof-govuk-template": "^2.0.1",
+    "hogan-express-strict": "^0.5.4",
+    "npm-sass": "^2.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.2"
+  }
 }
